--- a/Detectron2-densepose-IUV2XYZ.ipynb
+++ b/Detectron2-densepose-IUV2XYZ.ipynb
@@ -23,7 +23,7 @@
       },
       "source": [
         "# Google Drive Mount\n",
-        "I employ Detectron2 in Google Colab, and mount Google Drive to load several files which will be used later.  "
+        "I employ Detectron2 in Google Colab. If you have configured the Detectron2 environment in your own computer, just ignore this google drive mount code.  "
       ]
     },
     {
